--- a/Angular_SelfStudy/Practice_selfStudy/p1-addPicButton-URL/src/app/app.component.html
+++ b/Angular_SelfStudy/Practice_selfStudy/p1-addPicButton-URL/src/app/app.component.html
@@ -1,1 +1,3 @@
-<div>hello world</div>
+<a routerLink="add-img-button-component">add image button</a><br />
+<a routerLink="pic-target-component">picture target</a>
+<router-outlet></router-outlet>
