add component manually

--- a/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/app.component.html
+++ b/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/app.component.html
@@ -1,19 +1,5 @@
 <div class="container-fluid">
   <div class="h4">welcome to {{ title }}</div>
-  <div>
-    <ul class="nav">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Active</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled">Disabled</a>
-      </li>
-    </ul>
-  </div>
+  <app-nav-bar></app-nav-bar>
+  <article></article>
 </div>
