--- a/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/nav-bar/nav-bar.component.html
+++ b/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/nav-bar/nav-bar.component.html
@@ -1,1 +1,16 @@
-<p>nav-bar works!</p>
+<div>
+  <ul class="nav">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#">Active</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled">Disabled</a>
+    </li>
+  </ul>
+</div>
