removing the boostrap from project

--- a/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/app.component.html
+++ b/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div class="container-fluid">
-  <div class="h4">welcome to {{ title }}</div>
+<div>
+  <div>welcome to {{ title }}</div>
   <app-nav-bar></app-nav-bar>
   <article></article>
+  <sidebar></sidebar>
   <footer></footer>
 </div>
