--- a/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/nav-bar/nav-bar.component.html
+++ b/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/nav-bar/nav-bar.component.html
@@ -1,19 +1,7 @@
 <div>
-  <ul class="nav">
-    <li *ngFor="let nav of navList" class="nav-item">
-      <a class="nav-link" href="#">{{ nav }}</a>
+  <ul>
+    <li *ngFor="let nav of navList">
+      <a>{{ nav }}</a>
     </li>
-    <!-- <li class="nav-item">
-      <a class="nav-link active" href="#">Active</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link">Disabled</a>
-    </li> -->
   </ul>
 </div>
