--- a/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/app.component.html
+++ b/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/app.component.html
@@ -1,7 +1,1 @@
-<div>
-  <div>welcome to {{ title }}</div>
-  <app-nav-bar></app-nav-bar>
-  <article></article>
-  <sidebar></sidebar>
-  <footer></footer>
-</div>
+<router-outlet></router-outlet>
