--- a/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/pages/home-page.html
+++ b/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/pages/home-page.html
@@ -1,7 +1,6 @@
 <div>
   <h2>welcome to</h2>
   <app-nav-bar></app-nav-bar>
-  <article></article>
-  <sidebar></sidebar>
+  <div class="main"><router-outlet></router-outlet></div>
   <footer></footer>
 </div>
