--- a/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/components/main/news.component.html
+++ b/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/components/main/news.component.html
@@ -1,3 +1,3 @@
-<div>news sidebar</div>
+<div>news works!</div>
 <div><a routerLink="/"> back</a></div>
 <!-- when its static links you dont need to [routerLink]="['/']" since you dont you any static one-->
