--- a/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/components/main/products.component.html
+++ b/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/components/main/products.component.html
@@ -1,2 +1,5 @@
 <div>product component works!</div>
 <div><a routerLink="/"> back</a></div>
+<a routerLink="/products/details">deatils</a>
+<a routerLink="/products/price">price</a>
+<div class="product_moreInfo"><router-outlet></router-outlet></div>
