--- a/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/pages/home-page.html
+++ b/Angular_SelfStudy/Practice_selfStudy/pre-workout/src/app/pages/home-page.html
@@ -1,5 +1,6 @@
 <div>
   <h2>welcome to</h2>
+  <app-header></app-header>
   <app-nav-bar></app-nav-bar>
   <div class="main"><router-outlet></router-outlet></div>
   <footer></footer>
